--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
+requires = ["flit_core >=3.2,<4","sphinx>=4.3.0","sphinx-rtd-theme>=0.5.1"]
 build-backend = "flit_core.buildapi"
-extensions = [sphinx_rtd_theme]
 
 [project]
 name = "rmi-pysteps"
